[package]
name = "pumpfun-copy"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
solana-sdk = "1.17"
solana-client = "1.17"
solana-transaction-status = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.2"
anyhow = "1.0"
dotenv = "0.15"
chrono = "0.4"
jito-json-rpc-client = "0.1"
borsh = "0.10"
bytemuck = "1.13"
