[package]
name = "pumpfun-copy"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
solana-sdk = "1.17"
solana-client = "1.17"
solana-transaction-status = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.2"
anyhow = "1.0"
dotenv = "0.15"
chrono = "0.4"
borsh = "0.10"
bytemuck = "1.13"
jito-json-rpc-client = { git = "https://github.com/jito-labs/json-rpc-client.git", rev = "7f3c0a4" }

# Optional but recommended for better performance
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
